@@ -9,7 +9,7 @@
     <x>0</x>
     <y>0</y>
     <width>704</width>
-    <height>443</height>
+    <height>429</height>
    </rect>
   </property>
   <property name="minimumSize" >
@@ -47,9 +47,7 @@
        </size>
       </property>
       <property name="styleSheet" >
-       <string>QFrame{
-	background: white;
-} </string>
+       <string>QFrame{background: white;}</string>
       </property>
       <property name="frameShape" >
        <enum>QFrame::StyledPanel</enum>
@@ -298,7 +296,7 @@
       </property>
      </widget>
     </item>
-    <item rowspan="3" row="2" column="1" >
+    <item rowspan="4" row="2" column="1" >
      <layout class="QVBoxLayout" >
       <item>
        <widget class="QPushButton" name="btnAddVideo" >
@@ -466,6 +464,75 @@
      </layout>
     </item>
     <item row="3" column="0" >
+     <widget class="QFrame" name="frmInformation" >
+      <property name="minimumSize" >
+       <size>
+        <width>16</width>
+        <height>24</height>
+       </size>
+      </property>
+      <property name="maximumSize" >
+       <size>
+        <width>16777215</width>
+        <height>24</height>
+       </size>
+      </property>
+      <property name="styleSheet" >
+       <string> QFrame{background: white;}</string>
+      </property>
+      <property name="frameShape" >
+       <enum>QFrame::StyledPanel</enum>
+      </property>
+      <layout class="QGridLayout" >
+       <property name="leftMargin" >
+        <number>4</number>
+       </property>
+       <property name="topMargin" >
+        <number>2</number>
+       </property>
+       <property name="rightMargin" >
+        <number>4</number>
+       </property>
+       <property name="bottomMargin" >
+        <number>2</number>
+       </property>
+       <property name="horizontalSpacing" >
+        <number>2</number>
+       </property>
+       <property name="verticalSpacing" >
+        <number>2</number>
+       </property>
+       <item row="0" column="0" >
+        <widget class="QLabel" name="lblVideosCount" >
+         <property name="text" >
+          <string>&lt;b>Videos count:&lt;/b> 0 &lt;span style="color:#a9a9a9;">(0 finished)&lt;/span></string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="2" >
+        <widget class="QLabel" name="lblDownloadingCount" >
+         <property name="text" >
+          <string>&lt;b>Downloading:&lt;/b> 0 of 0</string>
+         </property>
+         <property name="alignment" >
+          <set>Qt::AlignCenter</set>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="4" >
+        <widget class="QLabel" name="lblDownloadSpeed" >
+         <property name="text" >
+          <string>&lt;b>Download speed:&lt;/b> 0 Kb/sec</string>
+         </property>
+         <property name="alignment" >
+          <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </widget>
+    </item>
+    <item row="4" column="0" >
      <layout class="QHBoxLayout" >
       <item>
        <widget class="QCheckBox" name="chbDownloadVideosAuto" >
@@ -496,7 +563,7 @@
       </item>
      </layout>
     </item>
-    <item row="4" column="0" >
+    <item row="5" column="0" >
      <layout class="QHBoxLayout" >
       <property name="spacing" >
        <number>1</number>
