@@ -8,6 +8,7 @@
 - Added "Time Remaining" for video conversions
 - Added After a new instalation, the program check for new updates
 - Added "Support this project" button in "Information" form
+- Added "Information" panel in main form (Display items count, downloading count and total download speed)
 
 - Updated ProgressBar class (now is more configurable)
 - Updated Spanish (ES) language file
